--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ex1",
+  "name": "react-boilerplate",
   "version": "1.0.0",
-  "description": "test package",
-  "main": "myJs1.js",
+  "description": "light weight react boiler plate",
+  "main": "index.js",
   "scripts": {
     "test": "npm test",
     "build": "webpack",
@@ -12,6 +12,7 @@
   "author": "mchepuri",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
@@ -23,7 +24,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
