--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "styled-jsx-plugin-postcss": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -26,9 +27,12 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
+    "styled-jsx": "^3.2.1",
+    "styled-jsx-plugin-sass": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
