--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm test",
     "build": "webpack",
-    "start": "webpack-dev-server --host 0.0.0.0",
+    "start": "webpack serve  --host 0.0.0.0",
     "deploy": "npm run build"
   },
   "author": "mchepuri",
@@ -22,19 +22,20 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@webpack-cli/serve": "^1.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^7.0.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "styled-jsx": "^3.2.1",
     "styled-jsx-plugin-sass": "^1.0.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^4.7.4"
   }
 }
