--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": [
-        ["styled-jsx/babel",{ "plugins": ["styled-jsx-plugin-sass"] }]
-      ]
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
