--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm test",
     "build": "webpack",
-    "start": "webpack serve  --host 0.0.0.0",
+    "start": "webpack serve --open --hot --host 0.0.0.0 --mode development",
     "deploy": "npm run build"
   },
   "author": "mchepuri",
@@ -19,23 +19,21 @@
     "styled-jsx-plugin-postcss": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
     "@webpack-cli/serve": "^1.6.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-react": "^6.24.1",
+    "babel-loader": "^8.2.2",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^7.0.1",
+    "mini-css-extract-plugin": "^2.4.6",
+    "sass": "^1.49.11",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "styled-jsx": "^3.2.1",
     "styled-jsx-plugin-sass": "^1.0.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.0.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.7.4"
   }
 }
