--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^2.6.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.2.8",
     "styled-jsx-plugin-postcss": "^2.0.1"
   },
   "devDependencies": {
