--- a/package.json
+++ b/package.json
@@ -12,17 +12,33 @@
   "author": "mchepuri",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
+    "@svgr/webpack": "^6.5.1",
+    "axios": "^1.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "chessboard-engine": "^0.1.0",
+    "fs": "0.0.1-security",
     "node-fetch": "^2.6.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^7.2.8",
-    "styled-jsx-plugin-postcss": "^2.0.1"
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.9.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "styled-jsx-plugin-postcss": "^2.0.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.22.5",
     "@webpack-cli/serve": "^1.6.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^3.2.0",
@@ -33,7 +49,10 @@
     "style-loader": "^1.0.0",
     "styled-jsx": "^3.2.1",
     "styled-jsx-plugin-sass": "^1.0.0",
-    "webpack": "^5.70.0",
+    "svg-url-loader": "^8.0.0",
+    "ts-loader": "^9.4.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.86.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.7.4"
   }
