--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm test",
     "build": "webpack",
     "start": "webpack serve --open --hot --host 0.0.0.0 --mode development",
+    "cra-lite": "npm  i prompt-sync; node scripts/create_app",
     "deploy": "npm run build"
   },
   "author": "mchepuri",
@@ -20,6 +21,7 @@
     "chessboard-engine": "^0.1.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.7",
+    "prompt-sync": "^4.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-fast-marquee": "^1.3.5",
